apps/console/src/styles.scss
@use '@angular/material/prebuilt-themes/indigo-pink.css';
@use '@angular/cdk/overlay-prebuilt.css';
@use '@xterm/xterm/css/xterm.css';

// regular style toast
@use 'ngx-toastr/toastr';

@tailwind base;
@tailwind components;
@tailwind utilities;

/* You can add global styles to this file, and also import other style files */

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden; /* ビューポート全体でスクロールさせない */
}
body {
  margin: 0;
  font-family: Roboto, 'Helvetica Neue', sans-serif;
}

